--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h2> A program to greet the planet. </h2>
 
   <p>This page is an attempt to greet everyone on Earth using our various human languages. We're interested to see how
-    long our list can become.</p>
+    long our list can become. lol</p>
 
   <p>We'll start with languages that the Epicodus staff could offer without using Google. </p>
 
@@ -21,6 +21,8 @@
     <li> Japanese: Konnichiwa, sekai! </li>
     <li> French: Bonjour, monde! </li>
     <li> Kinyarwanda: Mwirwe, isi! </li>
+    <li> German: Guten tag, Welt! </li>
+    <li> Pig Latin: ello-hay, orld-way! </li>
   </ul>
 </body>
 
